removed blaze templates, added angular templates, added angular, angular-meteor, added simple todo app

--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,20 @@
 <head>
-  <title>meteor-sample</title>
+    <title>Todo List</title>
 </head>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
+<body ng-app="todo">
+    <div ng-controller="todoListController">
 
-  {{> hello}}
-  {{> info}}
+        <form ng-submit="addTodo(newTodo)">
+            <input ng-model="newTodo" type="text"/>
+        </form>
+
+        <div>
+            <div ng-repeat="todo in todos">
+                <input type="checkbox" ng-checked="todo.checked" ng-click="toggleStatus(todo)"/>
+                <p>{{todo.task}}</p>
+                <button ng-click="removeTodo(todo)">Delete</button>
+            </div>
+        </ul>
+    </div>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
